Introduce new model structure
  * Everything related to dNeff is now in a own model tree
  * -> LCDM got reduced to one single model
  * Now possible to sppecify if dNeff is extra radiation
    or modified neutrino temperature.
  * Adjust friend relation of (General)CosmoALP to the
    new model tree.
  * Updated all relevant "CosmoBit_" yaml-files
  * Removed redundant and/or outdated yaml-files.

--- a/yaml_files/CosmoBit_ALP.yaml
+++ b/yaml_files/CosmoBit_ALP.yaml
@@ -6,7 +6,7 @@
 
 Parameters:
 
-  LCDM_dNeffCMB_dNeffBBN_etaBBN: !import include/LCDM_dNeffCMB_dNeffBBN_etaBBN_scan.yaml
+  LCDM: !import include/LCDM_scan.yaml
 
   CosmoALP:
     fa: 1.0
