Adjusted CosmoBit yaml-files
    modified:   yaml_files/CosmoBit_ALP.yaml
    modified:   yaml_files/CosmoBit_exoClass.yaml
    modified:   yaml_files/CosmoBit_testALP.yaml
    modified:   yaml_files/CosmoBit_testCosmo.yaml
    modified:   yaml_files/CosmoBit_testDecay.yaml
    modified:   yaml_files/CosmoBit_testMP.yaml

--- a/yaml_files/CosmoBit_ALP.yaml
+++ b/yaml_files/CosmoBit_ALP.yaml
@@ -81,6 +81,9 @@ ObsLikes:
   - capability: lnL_RParameter
     purpose: LogLike
 
+  - capability: lnL_SN1987A_DecayApprox
+    purpose: LogLike
+
   - capability: DM_fraction
     purpose: Observable
     module: CosmoBit
