--- a/yaml_files/CosmoBit_testMP.yaml
+++ b/yaml_files/CosmoBit_testMP.yaml
@@ -21,6 +21,14 @@ Parameters:
  # --- import model parameters for models to scan over ---
  LCDM: !import include/LCDM_scan.yaml        # base LCDM
 
+  # Everything Neff and eta related
+ #etaBBN:                             !import include/etaBBN.yaml
+ #rCMB:                               !import include/rCMB.yaml
+ #rBBN_rCMB:                          !import include/rBBN_rCMB.yaml
+ #dNeffCMB:                           !import include/dNeffCMB.yaml
+ #dNeffBBN_dNeffCMB:                  !import include/dNeffBBN_dNeffCMB.yaml
+ etaBBN_rBBN_rCMB_dNeffBBN_dNeffCMB: !import include/etaBBN_rBBN_rCMB_dNeffBBN_dNeffCMB.yaml
+
  # neutrino masses
  #StandardModel_numass_single: !import include/StandardModel_numass_single_scan.yaml
  StandardModel_numass_degenerate: !import include/StandardModel_numass_degenerate_scan.yaml
