Added realisatic neutrino mass scenario
  * Parametrisation: lightest neutrino mass + two mass splittings
  * Mass splitings are constrained by oscillation data
  * sign of dmNu3l determines the hierarchy

  NOTE: This parametrisation is different from 'StandardModel_mNudiff'

	modified:	CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp
	modified:	CosmoBit/src/CosmoBit.cpp
	modified:	Models/include/gambit/Models/models/StandardModel_numass.hpp
	modified:	Models/src/models/StandardModel_numass.cpp
	modified:	yaml_files/CosmoBit_exoClass.yaml
	modified:	yaml_files/CosmoBit_testALP.yaml
	modified:	yaml_files/CosmoBit_testCosmo.yaml
	modified:	yaml_files/CosmoBit_testDecay.yaml
	modified:	yaml_files/CosmoBit_testMP.yaml
	new file:	yaml_files/include/StandardModel_numass_split_IH_scan.yaml
	new file:	yaml_files/include/StandardModel_numass_split_NH_scan.yaml

--- a/yaml_files/CosmoBit_testMP.yaml
+++ b/yaml_files/CosmoBit_testMP.yaml
@@ -31,7 +31,9 @@ Parameters:
 
  # neutrino masses
  #StandardModel_numass_single: !import include/StandardModel_numass_single_scan.yaml
- StandardModel_numass_degenerate: !import include/StandardModel_numass_degenerate_scan.yaml
+ #StandardModel_numass_degenerate: !import include/StandardModel_numass_degenerate_scan.yaml
+ StandardModel_numass_split: !import include/StandardModel_numass_split_NH_scan.yaml
+ #StandardModel_numass_split: !import include/StandardModel_numass_split_IH_scan.yaml
 
  # Cosmological nuisance parameters (except for Planck CMB Likelihoods) 
  cosmo_nuisance_params_Pantheon: !import include/cosmo_nuisance_params_Pantheon.yaml
@@ -114,6 +116,16 @@ ObsLikes:
   - purpose:      Observable
     capability:   MP_LogLikes
     type:         map_str_dbl
+
+  - purpose:      LogLike
+    capability:   dmNu21_LogLike
+    module:       CosmoBit
+    type:         double
+
+  - purpose:      LogLike
+    capability:   dmNu3l_LogLike
+    module:       CosmoBit
+    type:         double
 
 #======== Rule entries ========
 Rules:
