--- a/yaml_files/CosmoBit_exoClass.yaml
+++ b/yaml_files/CosmoBit_exoClass.yaml
@@ -23,7 +23,9 @@ Parameters:
 
  # neutrino masses
  #StandardModel_numass_single: !import include/StandardModel_numass_single_scan.yaml
- StandardModel_numass_degenerate: !import include/StandardModel_numass_degenerate_scan.yaml
+ #StandardModel_numass_degenerate: !import include/StandardModel_numass_degenerate_scan.yaml
+ StandardModel_numass_split: !import include/StandardModel_numass_split_NH_scan.yaml
+ #StandardModel_numass_split: !import include/StandardModel_numass_split_IH_scan.yaml
 
  # Cosmological nuisance parameters (except for Planck CMB Likelihoods) 
  cosmo_nuisance_params_Pantheon: !import include/cosmo_nuisance_params_Pantheon.yaml
@@ -76,7 +78,16 @@ Scanner:
 
 #======== Observables of interest ========
 ObsLikes:
- 
+  - purpose:      LogLike
+    capability:   dmNu21_LogLike
+    module:       CosmoBit
+    type:         double
+
+  - purpose:      LogLike
+    capability:   dmNu3l_LogLike
+    module:       CosmoBit
+    type:         double
+
   - purpose:      LogLike
     capability:   compute_Planck_high_TT_loglike
     function:     function_Planck_high_TT_lite_loglike
