--- a/yaml_files/CosmoBit_testALP.yaml
+++ b/yaml_files/CosmoBit_testALP.yaml
@@ -28,7 +28,9 @@ Parameters:
  
  # neutrino masses
  #StandardModel_numass_single: !import include/StandardModel_numass_single_scan.yaml
- StandardModel_numass_degenerate: !import include/StandardModel_numass_degenerate_scan.yaml
+ #StandardModel_numass_degenerate: !import include/StandardModel_numass_degenerate_scan.yaml
+ StandardModel_numass_split: !import include/StandardModel_numass_split_NH_scan.yaml
+ #StandardModel_numass_split: !import include/StandardModel_numass_split_IH_scan.yaml
 
  # nuisance parameters in Planck likelihood
  Planck_lite: !import include/Planck_lite_scan.yaml
@@ -81,7 +83,17 @@ Scanner:
 
 #======== Observables of interest ========
 ObsLikes:
-  
+
+  - purpose:      LogLike
+    capability:   dmNu21_LogLike
+    module:       CosmoBit
+    type:         double
+
+  - purpose:      LogLike
+    capability:   dmNu3l_LogLike
+    module:       CosmoBit
+    type:         double
+
   - purpose:      LogLike
     capability:   BAO_LogLike
     module:       CosmoBit
