Redesigned the plc_2.0 frontend and use non confusing names for the Planck likelhoods
	modified:       Backends/include/gambit/Backends/frontends/plc_2_0.hpp
	new file:       Backends/src/frontends/plc_2_0.cpp
	modified:       CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp
	modified:       CosmoBit/src/CosmoBit.cpp
	modified:       yaml_files/CosmoBit_exoClass.yaml
	modified:       yaml_files/CosmoBit_testALP.yaml
	modified:       yaml_files/CosmoBit_testCosmo.yaml
	modified:       yaml_files/CosmoBit_testDecay.yaml

--- a/yaml_files/CosmoBit_exoClass.yaml
+++ b/yaml_files/CosmoBit_exoClass.yaml
@@ -89,17 +89,20 @@ ObsLikes:
     type:         double
 
   - purpose:      LogLike
-    capability:   compute_Planck_high_TT_loglike
-    function:     function_Planck_high_TT_lite_loglike
+    capability:   Planck_highl_loglike
+    function:     function_Planck_highl_TT_lite_loglike
+    #function:     function_Planck_highl_TTTEEE_lite_loglike
 
   - purpose:      LogLike
-    capability:   compute_Planck_lensing_loglike
+    capability:   Planck_lensing_loglike
 
 # We better should not use this likelihood for quick tests.
-# It takes ages to load.
+# lowl_TEB takes ages to load.
 #
 #  - purpose:      LogLike
-#    capability:   compute_Planck_lowp_TT_loglike
+#    capability:   Planck_lowl_loglike
+#    function:     function_Planck_lowl_TEB_loglike
+#    #function:     function_Planck_lowl_TT_loglike
 #
 
   - purpose:      Obs
